jupyter-chart/templates/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notebook
  name: notebook-external
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    statefulset.kubernetes.io/pod-name: notebook-0
  type: ClusterIP
