jupyter-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notebook
  name: notebook
spec:
  ports:
  - name: 8888-tcp
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: notebook
  type: ClusterIP
