jupyter-chart/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: notebook
  name: notebook
 
spec:
  port:
    targetPort: 8888-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: notebook-external
    weight: 100
  wildcardPolicy: None
